--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ block body
     div(ui-view)
     
     //- mine
-    script(type='text/javascript', src='lib/angular/angular.min.js')
+    script(type='text/javascript', src='lib/angular/angular.js')
     script(type='text/javascript', src='lib/angular-ui-router/angular-ui-router.min.js')
     
     script(src='js/controllers.js')
