--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,8 @@ html(lang='en', ng-app='app')
     head
         meta(charset='utf8')
         base(href='/')
-        title Node, Express e Angular
+        title Node, Express, Angular and Stylus
         link(rel='stylesheet', href='lib/bootstrap/css/bootstrap.min.css')
+        link(rel='stylesheet', href='css/main.css')
     body
         block body
