--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -1,9 +1,14 @@
-p There are {{posts.length}} posts
-div(ng-repeat='post in posts')
+div.row.posts_count
+    u 
+        | There are 
+        strong {{posts.length}} 
+        | posts
+    
+div.row(ng-repeat='post in posts')
     h3 {{post.title}}
     div {{post.text}}
     
-    ul
+    ul.list-inline
         li
             a(ui-sref="post({id: post.id})") More
         li
