--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -6,7 +6,7 @@ div.row.posts_count
     
 div.row(ng-repeat='post in posts')
     h3 {{post.title}}
-    div {{post.text}}
+    div {{post.intro}}
     
     ul.list-inline
         li
