--- a/views/partials/add.jade
+++ b/views/partials/add.jade
@@ -1,8 +1,13 @@
-h2 Write a new post
+header
+    h2.text-center New Post
 
-label(for='title') Title: 
-input(ng-model='form.title', name='title')
-p Body:
-textarea(ng-model='form.text', cols='50', rows='15')
-p
-    button(ng-click='submitPost()') Submit Post
+div.row
+    div(class="form-group")
+        label(for="title") Type your title:
+        input(ng-model='form.title', class="form-control", id="title", placeholder="Title")
+
+    div(class="form-group")
+        label(for="text") Type your text:
+        textarea(ng-model='form.text', class="form-control", id="text", cols='50', rows='15', placeholder="Text")
+        
+    button(ng-click='submitPost()', class="btn btn-primary") Create new post
